<resources>
    <string name="app_name">Smart Camp</string>
    <string name="car_loaded_label">チェック済みを非表示</string>
    <string name="item_add_label">+</string>
    <string name="camping_ground">キャンプ場</string>
    <string name="camping_ground_input">キャンプ場名を入力または検索</string>
    <string name="address">住所</string>
    <string name="address_input">住所を入力（検索時は自動で入力されます）</string>
    <string name="modify">更新</string>
    <string name="date">日付</string>
    <string name="from_to_label">〜</string>
    <string name="camp_gear_label">キャンプ道具</string>
    <string name="camp_gear_button_label">一覧</string>
    <string name="shopping_item_label">買い物</string>
    <string name="shopping_item_button_label">一覧</string>
    <string name="camp_gear_category">カテゴリー</string>
    <string name="save_button_label">登録</string>
    <string name="del_button_label">削除</string>
    <string name="camp_detail_name_label">キャンプの計画</string>
    <string name="camp_basic_info_label">キャンプの基本情報</string>
    <string name="set_date_button_label">日付選択</string>
    <string name="shopping_item_bought_label">チェック済みを非表示</string>
    <string name="shopping_item_title_label">買い物リスト</string>
    <string name="shopping_item_name_label">品名</string>
    <string name="shopping_item_category_label">カテゴリー</string>
    <string name="camping_ground_name_description">キャンプ場の名前</string>
    <string name="date_description_label">日程が表示される</string>
    <string name="campground_master_label">キャンプ場検索</string>
    <string name="campground_search_hint">キャンプ場の名前で検索する</string>
</resources>